--- a/strategy.ipynb
+++ b/strategy.ipynb
@@ -140,7 +140,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interp.load.ivy(\"org.plotly-scala\" %% \"plotly-almond\" % System.getenv(\"PLOTLY_ALMOND_VERSION\"))\n",
+    "interp.load.ivy(\"org.plotly-scala\" %% \"plotly-almond\" % System.getenv(\"PLOTLY_ALMOND_VERSION\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import plotly._, plotly.element._, plotly.layout._, plotly.Almond._\n",
     "// restrict the output height to avoid scrolling in output cells\n",
     "repl.pprinter() = repl.pprinter().copy(defaultHeight = 3)"
